<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFAFCFF">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rv_item_background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/rv_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="20sp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/rv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/name_edt"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_edt" />


        </LinearLayout>

        <ImageView
            android:id="@+id/rv_more"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingEnd="15sp"
            android:src="@drawable/dots"
            android:contentDescription="@string/app_name"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

</LinearLayout>